--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -27,18 +27,26 @@
 @media(max-width: 375px) {
     .copyright {
         position: relative;
-        bottom: 0rem;
+        bottom: 0.2rem;
         right: -8%;
+    }
+    .paragraph p {
+        font-size: 0.8rem !important;
+        margin-left: 0.8rem;
     }
 }
 @media(max-width: 320px) {
     .size-elements-footer p {
         font-size: 0.6rem !important;
     }
+    .paragraph p {
+        font-size: 0.5rem !important;
+        margin-left: 0rem;
+    }
     .copyright {
         position: relative;
         bottom: 0.5rem;
-        right: 0.2rem;
+        right: 0.5rem;
     }
 }
 
