--- a/src/styles/Projects.css
+++ b/src/styles/Projects.css
@@ -14,19 +14,39 @@
     color: #034687 !important;
 }
 
+figcaption, h1 {
+    font-size: 1rem !important;
+}
+
 /* media query */
 @media(max-width: 1440px) {
     .figure-third {
         margin-top: 3rem !important;
+    }
+    .img-fluid-portfolio {
+        height: 11.3rem !important;
     }
 }
 @media(max-width: 1024px) {
     .margin-projects {
         margin-bottom: 2rem !important;
     }
+    .figure-portfolio{
+        margin-left: 0.2rem;
+    }
+}
+@media(min-width: 576px) {
+    figure:hover {
+        transform: scale(1.2);
+        transition: all 1.5s ease;
+        cursor: pointer;
+    }
 }
 @media(max-width: 425px) {
     .margin-projects {
         text-align: center !important;
+    }
+    .col-425 {
+        margin-left: 2.5rem;
     }
 }
