--- a/src/styles/Education.css
+++ b/src/styles/Education.css
@@ -12,6 +12,13 @@ h1 {
 }
 
 /* media query */
+@media screen and (max-width: 767px) {
+    .card-body .card-title,
+    .card-text,
+    .card-data {
+        font-size: 1rem !important;
+    }
+}
 @media(max-width: 375px) {
     .card-professional .card-title,
     .card-text, .card-data {
