--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -24,7 +24,7 @@
         right: 0.2rem;
     }
 }
-@media(max-width: 375px) {
+@media screen and (max-width: 375px) {
     .copyright {
         position: relative;
         bottom: 0.2rem;
@@ -33,6 +33,9 @@
     .paragraph p {
         font-size: 0.8rem !important;
         margin-left: 0.8rem;
+    }
+    .bg-footer {
+        margin-top: auto;
     }
 }
 @media(max-width: 320px) {
