--- a/src/styles/Skills.css
+++ b/src/styles/Skills.css
@@ -19,6 +19,10 @@
     .width {
         height: 80vh !important;
     }
+    .margin-col {
+        position: relative;
+        bottom: 3.5rem;
+    }
 }
 @media(max-width: 1024px) {
     .width {
